# CivicSupportApp

./: .gitignore  AI_LOCATION_VERIFICATION.md  AUTO_CREATE_FEATURE.md  AUTO_CREATE_SUMMARY.md  CHANGELOG_CSV_IMPORT.md  CSV_BULK_IMPORT.md  CSV_IMPORT_IMPLEMENTATION.md  CSV_IMPORT_QUICKSTART.md  CivicSense_Product_Brief.docx  CivicSense_Product_Brief.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  FEATURE_COMPLETE_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  PRODUCTION_READINESS.md  QUICKSTART.md  QUICK_TEST_GUIDE.md  README.md  SETUP_AND_TEST.md  TESTING_GUIDE.md  backend_test.py  backend_test_results.json  docker-compose.yml  model.patch  setup.sh  test_result.md
.emergent/: emergent.yml
backend/: .env  .env.example  .gitignore  Dockerfile  config.py  init_db.py  officials_auto_create_test.csv  officials_template.csv  pyproject.toml  render.yaml  requirements.txt  server.py  supabase_schema.sql  test_csv_import.py  validate_csv.py  verify_features.py
backend/api/: index.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  categories.py  health.py  issues.py  officials.py  router.py  twitter.py  users.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  ai.py  issue.py  official.py  twitter.py  user.py
backend/app/services/: __init__.py  ai_service.py  twitter_service.py
backend/app/services/twitter/: __init__.py  client.py  parser.py  scheduler.py  sync.py
dashboard/: .env.production  index.html  package-lock.json  package.json
frontend/: .env  .gitignore  package.json  (+2 more)
(+44 files in other folders)
